harmonized with ‘normalize.css’

--- a/css/ie7.css
+++ b/css/ie7.css
@@ -1,14 +1,13 @@
-/* IE TYPOGRAPHY
+html.wf-loading details, html.wf-loading figcaption, html.wf-loading h1, html.wf-loading h2, html.wf-loading h3, html.wf-loading h4, html.wf-loading h5, html.wf-loading h6, html.wf-loading p, html.wf-loading blockquote, html.wf-loading dfn, html.wf-loading mark, html.wf-loading pre, html.wf-loading code, html.wf-loading kbd, html.wf-loading samp, html.wf-loading q, html.wf-loading sub, html.wf-loading sup, html.wf-loading li, html.wf-loading a, html.wf-loading span, html.wf-loading td, html.wf-loading th, html.wf-loading legend, html.wf-loading label, html.wf-loading button, html.wf-loading input, html.wf-loading select, html.wf-loading textarea, html.wf-loading small {filter: alpha(opacity=0);}
+
+/* IE-7 TYPOGRAPHY
 -------------------------------------------------------------- */
 
-html.wf-loading h1, html.wf-loading h2, html.wf-loading h3, html.wf-loading h4, html.wf-loading p, html.wf-loading li, html.wf-loading dt, html.wf-loading dd, html.wf-loading blockquote, html.wf-loading a, html.wf-loading span, html.wf-loading label, html.wf-loading td, html.wf-loading th, html.wf-loading input, html.wf-loading select, html.wf-loading textarea, html.wf-loading small {filter: alpha(opacity=0);}
-
-/* IE GLOBAL
+/* IE-7 FORMS
 -------------------------------------------------------------- */
 
-.wrapper {
-height: 100%;
-}
+/* IE-7 GLOBAL
+-------------------------------------------------------------- */
 
-/* IE STYLEs
+/* IE-7 STYLEs
 -------------------------------------------------------------- */
