--- a/css/global.css
+++ b/css/global.css
@@ -1,15 +1,124 @@
+/* Classes
+-------------------------------------------------------------- */
+
+ul.inline {
+    list-style-type:none;
+    padding-left:0;
+}
+
+ul.inline li {
+    display:inline;
+    float:left;
+    padding:0;
+}
+
+dl.section-list dt {
+    float: left;
+    line-height: 2.25em;
+    margin-left: 1.75em;
+    padding: 0;
+    top: 1px;
+}
+
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+	dl.section-list dt {
+    line-height: 1.875em;
+	}
+}
+
+dl.section-list dt a {
+    color: inherit;
+    text-decoration: none;
+    outline: none;
+}
+
+dl.section-list dt a:hover, dl.section-list dt.selected a {
+    color: #655049;
+}
+
+dl.section-list dt.selected a {
+    border-bottom: 3px solid;
+    padding-bottom: 4px;
+    z-index: 1;
+}
+
+dl.section-list dd {
+    border-top: 1px solid #D9D3D1;
+    clear: left;
+    padding-top: 0.5em;
+    padding-left: 1.75em;
+    margin-bottom: 1.125em;
+}
+
+dl.section-list dd.selected {
+    display: block;
+}
+
+.alignleft {
+    float:left;
+}
+
+.alignright {
+    float:right;
+}
+
+.aligncenter {
+    float:none;
+    margin: 0 auto;
+}
+
+.alignnone {
+    float:none;
+}
+
+.clear-both {
+    clear: both
+}
+
+.clear-left {
+    clear: left
+}
+
+.clear-right {
+    clear: right
+}
+
+.img-txt {
+    text-indent: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    font-size: 1em;
+    line-height: 1em;
+    outline: none;
+}
+
+.more-link {
+    font-size: 0.75em;
+    font-weight: bold;
+    line-height: 1.16em;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.hide {
+    display: none;
+}
+
+
+/* GLOBAL GENERAL
+-------------------------------------------------------------- */
+
 body {
     background: url("assets/BG-body.gif") repeat-y scroll center top #EEEEEE;
-    text-align: center;
+    text-align: left;
 }
 
 .wrapper {
-    background: none repeat scroll 0 0 #FFFFFF;
     margin: 0 auto;
-    max-width: 1200px;
-    min-width: 1026px;
     min-height: 100%;
-    text-align: left;
+    min-width:1026px;
+    max-width:1200px;
+    overflow: auto;
     width: 100%;
 }
 
@@ -18,22 +127,24 @@ body {
 -------------------------------------------------------------- */
 
 header {
-height:111px;
-border-bottom:1px solid black;
-display:block;
+    background: none repeat scroll 0 0 #FFFFFF;
+    border-bottom: 1px solid black;
+    display: block;
+    height: 6em;
 }
 
 #logo {
     color: black;
     display: block;
-    font-size: 27px;
-    line-height: 27px;
+    font-size: 1.75em;
+    line-height: 1em;
     margin: 0 auto;
     min-width: 140px;
-    padding: 10px 0;    text-align: center;
+    padding: 0.3em 0;
+    text-align: center;
     text-decoration: none;
     text-transform: uppercase;
-    top: 18px;
+    top: 0.6em;
     vertical-align: middle;
     width: 21.7%;
 }
@@ -41,15 +152,15 @@ display:block;
 nav {
     bottom: -1px;
     display: block;
-    height: 40px;
+    padding-left: 1.25%;
     position: absolute;
-    width: 100%;
+    width: 98.75%;
 }
 
 nav ul {
     margin: 0 auto;
     text-align: center;
-    width: 269px;
+    min-width: 269px;
 }
 
 nav ul li {
@@ -61,7 +172,7 @@ nav ul li a {
     background:#eeeeee none repeat scroll 0 0;
     border-bottom:1px solid black;
     float:left;
-    padding:9px 18px 8px;
+    padding:0.5em 1em 0.5em;
 }
 
 nav ul li a:hover {
@@ -81,19 +192,18 @@ nav ul li:last-child {
 /* CONTENT
 -------------------------------------------------------------- */
 
-
 .content {
     background: none repeat scroll 0 0 #FFFFFF;
     display: block;
-    margin: 0 0 49px;
-    padding-bottom: 14px;
-    padding-top: 6px;
+    margin: 0 0 3em;
+    padding-bottom: 1em;
+    padding-top: 0.5em;
 }
 
 .main {
     float: left;
     margin-left: 1.25%;
-    padding-bottom: 35px;
+    padding-bottom: 2em;
     width: 73.125%;
 }
 
@@ -103,7 +213,8 @@ nav ul li:last-child {
 }
 
 .genbox {
-    float:left;}
+    float:left;
+}
 
 .main .genbox {
     margin-left: 1.709402%;
@@ -115,9 +226,9 @@ nav ul li:last-child {
 }
 
 .col-full {
-clear:left;
-float: none;
-display:block;
+    clear:left;
+    float: none;
+    display:block;
 }
 
 .border {
@@ -125,8 +236,8 @@ outline:1px solid #999999;
 }
 
 .main .border {
-    margin: 7px 1.7094%;
-    padding: 0 1.7094% 14px;
+    margin: 0.5em 1.7094%;
+    padding: 0 1.7094% 1em;
 }
 
 .main.full .border {
@@ -135,90 +246,48 @@ outline:1px solid #999999;
 }
 
 #bread-crumbs {
-font-size:10px;
-overflow:hidden;
-padding-bottom:6px;
-padding-top:12px;
-text-transform:uppercase;
+    font-size:0.625em;
+    overflow:hidden;
+    padding-bottom:0.6em;
+    padding-top:1.2em;
+    text-transform:uppercase;
 }
 
 #bread-crumbs ul li {
-margin-right:6px;
+    margin-right:0.6em;
 }
 
 #bread-crumbs ul li:after {
-content: ">";
+    content: ">";
 }
 
 #bread-crumbs ul li:last-child:after {
-content: none;
+    content: none;
 }
 
 #bread-crumbs ul li a {
-color:black;
-margin-right:6px;
+    color:black;
+    margin-right:0.6em;
 }
 
 
 /* CONTENT: Images & Gallery
 -------------------------------------------------------------- */
 
-img, iframe, embed, video {
-    margin-bottom: 7px;
-    margin-top: 7px;
-    max-width: 96.5812%;
+p > img.alignleft,
+iframe.alignleft,
+embed.alignleft,
+video.alignleft,
+canvas.alignleft {
+    margin-right: 3.5%;
 }
 
-img {
-height: auto;
-}
-
-iframe, embed, video {
-min-width: 54%;
-}
-
-figure {}
-
-figcaption {
-    background: none repeat scroll 0 0 rgba(0, 0, 0, 0.5);
-    color: #FFFFFF;
-    display: none;
-    padding: 12px 0 12px 10px;
-    position: absolute;
-    top: 0;
-    width: 100%;
-}
-
-figure > a.caption {
-    background: none repeat scroll 0 0 #000000;
-    border: 3px solid #FFFFFF;
-    border-radius: 17px 17px 17px 17px;
-    color: #FFFFFF;
-    font-family: Georgia,Times,serif;
-    font-size: 15px;
-    font-style: italic;
-    height: 24px;
-    line-height: 24px;
-    opacity: 0.3;
-    outline: medium none;
-    position: absolute;
-    right: 7px;
-    text-align: center;
-    text-decoration: none;
-    top: 8px;
-    width: 24px;
-}
-
-figure > a:hover.caption {
-    opacity: 1;
-}
-
-p > img.alignleft, iframe.alignleft, embed.alignleft, video.alignleft, canvas.alignleft {
-margin-right: 3.5%;
-}
-
-p > img.alignright, iframe.alignright, embed.alignright, video.alignright, canvas.alignright {
-margin-left: 3.5%;
+p > img.alignright,
+iframe.alignright,
+embed.alignright,
+video.alignright,
+canvas.alignright {
+    margin-left: 3.5%;
 }
 
 .gallery-item {
@@ -235,7 +304,11 @@ margin-left: 3.5%;
     width: 100px;
 }
 
-.gallery-item > img, .thumbnail > img, .img-centre > img, .img-centre-w > img, .img-centre-h > img {
+.gallery-item > img,
+.thumbnail > img,
+.img-centre > img,
+.img-centre-w > img,
+.img-centre-h > img {
     display: block;
     left: 50%;
     margin: 0;
@@ -251,334 +324,9 @@ margin-left: 3.5%;
     left: auto;
 }
 
-.img-centre > img, .img-centre-w > img, .img-centre-h > img {
-}
-
-
-/* CONTENT: Forms
--------------------------------------------------------------- */
-
-fieldset {
-    padding-bottom: 7px;
-    padding-top: 7px;}
-
-fieldset h3:first-child {
-    padding-bottom: 21px;
-}
-
-.fieldrow {
-    background: none repeat scroll 0 0 #DDDDDD;
-    border: 4px solid #DDDDDD;
-    display: block;
-    margin-bottom: 13px;
-    -o-border-radius: 6px 6px 6px 6px;
--icab-border-radius: 6px 6px 6px 6px;
--khtml-border-radius: 6px 6px 6px 6px;
--moz-border-radius: 6px 6px 6px 6px;
--webkit-border-radius: 6px 6px 6px 6px;
-border-radius: 6px 6px 6px 6px;
-}
-
-label {
-    color: gray;
-    float: left;
-    font-size: 15px;
-    font-style: italic;
-    height: 28px;
-    line-height: 27px;
-    margin-right: 6px;
-    min-width: 15%;
-    padding: 0 1%;}
-
-label.for-boxes {
-    background: none repeat scroll 0 0 transparent !important;
-    color: black !important;
-    display: inline-block;
-    float: none;
-    height: 16px;
-    line-height: 14px;
-    margin-top: 5px;
-    min-width: 0;
-    padding-left: 0;
-    padding-right: 1.5%;
-    top: 2px;
-}
-
-.fieldrow.textarea label {
-    display: block;
-    float: none;
-    width: 98% !important;
-}
-
-.multiple label + span, .file-row label + span {
-    float: left;
-    width: 81%;
-}
-
-.multiple label + span a.img-txt {
-    background: url("assets/BTN-add.png") no-repeat scroll center center transparent;
-    float: right;
-    height: 28px;
-    width: 4.5%;
-}
-
-.multiple label + span a.subtract {
-    background: url("assets/BTN-subtract.png") no-repeat scroll center center transparent;
-}
-
-.multiple input[type=text] {
-    display: inline;
-    margin-bottom: 12px !important;
-    width: 93%;
-}
-
-.multiple input:last-of-type {
-    margin-bottom: 5px !important;
-}
-
-input {
-    border: medium none;
-    margin: 0;
-    padding: 0;}
-
-select {
-    color: black;
-    display: block;
-    font-family: Helvetica,Arial,sans-serif;
-    font-size: 15px;
-    font-style: italic;
-    height: 28px;
-    margin: 0 !important;
-    padding-top: 4px;    vertical-align: bottom;
-    width: 83%;
-}
-
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-	/* Safari and Google Chrome only - fix margins */
-	select {
-    font-size: 16px;
-    top: 3px;
-	}
-}
-
-input[type=text], input[type=number], input[type=date] {
-    border-bottom: 1px dashed gray;
-    color: black;
-    display: block;
-    font-size: 15px;
-    font-style: italic;
-    height: 17px;
-    line-height: 21px;
-    margin: 4px 0 5px !important;
-    outline: 5px solid #FFFFFF;
-    padding-top: 1px;
-}
-
-input[type=text] {
-    width: 81%;
-}
-
-input.phone-1, input.phone-2, input.phone-3, 
-input.postal-1, input.postal-2 {
-    display: inline;
-    margin-right: 14px !important;
-    text-align: center;
-    width: 39px !important;
-}
-
-input.phone-1, input.phone-2 {
-    width: 29px !important;
-}
-
-input.phone-3, input.postal-2 {
-    margin-right: 0 !important;
-}
-
-.radio-row, .check-row {
-    background: none repeat scroll 0 0 #eeeeee;
-}
-
-.select-row label, .radio-row label, .check-row label {
-    background: none repeat scroll 0 0 #DDDDDD;
-    margin-right: 0px;
-}
-
-input[type=radio], input[type=checkbox] {
-    height: 13px;
-    margin-left: 1.5%;
-    top: 2px;
-    vertical-align: middle;
-    width: 13px;
-    z-index: 1;
-}
-
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-	/* Safari and Google Chrome only - fix margins */
-	input[type=radio], input[type=checkbox] {
-    top: -1px;
-	}
-}
-
-.file-row .btn {
-    float: right;
-    right: -3px;
-    top: 0;
-    width: 20.5%;
-}
-
-.file-row .btn span {
-    padding: 0;
-}
-
-input[type=file] {
-    height: 100%;
-    left: 0;
-    opacity: 0;
-    position: absolute;
-    width: 100%;
-    z-index: 10;
-}
-
-input.fake-file {
-    position: absolute;
-    width: 78%;
-    z-index: 5;
-}
-
-input::-webkit-input-placeholder {
-    color: gray;
-    opacity: 0.5;
-}
-input:-moz-placeholder {
-    color: gray;
-}
-
-textarea {
-    background: url("assets/BG-textarea.png") repeat scroll left -2px #FFFFFF;
-    border: medium none;
-    color: black;
-    display: block;
-    font-size: 15px;
-    font-style: italic;
-    line-height: 21px;
-    margin: 2px 0 5px !important;
-    min-height: 125px;
-    outline: 5px solid #FFFFFF;
-    padding: 1px 0 0;
-    resize: none;
-    width: 81% !important;
-}
-	
-button, .btn { 
-    background-color: #555555;
-    border: medium none;
-    cursor: pointer;
-    display: inline-block;
-    overflow: visible;
-    padding: 1px;    text-decoration: none;
-    top: 3px;
--o-border-radius: 2px 2px 2px 2px;
--icab-border-radius: 2px 2px 2px 2px;
--khtml-border-radius: 2px 2px 2px 2px;
--moz-border-radius: 2px 2px 2px 2px;
--webkit-border-radius: 2px 2px 2px 2px;
-border-radius: 2px 2px 2px 2px;
-}
-
-button::-moz-focus-inner {
-border: 0;  /* overrides extra padding in Firefox */
-padding: 0;
-margin: 0;
-outline: none;
-}
-
-button span, .btn span { 
-    background-color: #dddddd;
-    background-image: -webkit-gradient( linear, left bottom, left top, color-stop(0.16, rgb(204,204,204)), color-stop(0.58, rgb(221,221,221)) );
-    background-image: -moz-linear-gradient( center bottom, rgb(204,204,204) 16%, rgb(221,221,221) 58% );
-    color: black;
-    display: block;
-    font-size: 15px;
-    font-weight: bold;
-    height: 26px;
-    line-height: 27px;
-    margin: 0 !important;
-    padding: 0 8px;    text-align: center;
-    text-shadow: 0 1px 0 white;
-    text-transform: uppercase;
-    top: 0;
-    white-space: nowrap;
-}
-
-.btn-lrg {
-    top: -1px;
-}
-
-.btn-lrg span {
-    font-size: 18px;
-    height: 33px;
-    line-height: 36px;
-    padding: 0 12px;
-}
-
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-	/* Safari and Google Chrome only - fix margins */
-	.btn-lrg span {
-    line-height: 34px;
-	}
-}
-
-.btn-small {
-    top: 7px;
-}
-
-.btn-small span {
-    font-size: 12px;
-    height: 19px;
-    line-height: 21px;
-    padding: 0 5px;
-}
-
-.btn-cancel, .btn-cancel span {
-    background: none repeat scroll 0 0 #FFFFFF;
-}
-
-.btn-cancel:hover {
-    background-color: #555555;
-}
-
-.btn-cancel:hover span {
-    background-color: #dddddd;
-    background-image: -webkit-gradient( linear, left bottom, left top, color-stop(0.16, rgb(204,204,204)), color-stop(0.58, rgb(221,221,221)) );
-    background-image: -moz-linear-gradient( center bottom, rgb(204,204,204) 16%, rgb(221,221,221) 58% );
-}
-
-fieldset.submit button, fieldset.submit .btn {
-    float: right;
-    margin-left: 2%;
-}
-
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-	/* Safari and Google Chrome only - fix margins */
-	button span {
-    margin-top: -1px;
-	}
-	label {
-    line-height: 30px;
-	}
-}
-
-
-/* Success, notice and error boxes
--------------------------------------------------------------- */
-
-.fieldrow.error {
-border: 4px solid red;
-}
-
-.fieldrow.error label {
-background: red;
-color: #ffffff;
+.img-centre > img,
+.img-centre-w > img,
+.img-centre-h > img {
 }
 
 
@@ -588,8 +336,8 @@ color: #ffffff;
 aside {
     background: none repeat scroll 0 0 #EEEEEE;
     float: right;
-    margin: 14px 2.5% 14px 0;
-    padding-bottom: 7px;
+    margin: 1em 2.5% 1em 0;
+    padding-bottom: 0.5em;
     width: 21.875%;
 }
 
@@ -607,52 +355,57 @@ aside .border {
 footer {
     background: none repeat scroll 0 0 #FFFFFF;
     border-top: 1px solid;
-    font-size: 12px;
-    height: 48px;
-    margin: -49px auto 0;
-    max-width: 1200px;
-    min-width: 1026px;
+    font-size: 0.75em;
+    height: 4em;
+    margin: -4em auto 0;
+    min-width:1026px;
+    max-width:1200px;
     padding: 0;
     width: 100%;
 }
 
 footer div {
     margin: 0 2.5%;
-    padding-top: 7px;
+    padding-top: 0.66666667em;
 }
 
 footer ul {
     display: block;
     margin-left: 0;
-    padding-top: 7px;
+    padding-top: 0.66666667em;
 }
 
 footer ul li {
-margin-right: 7px;
+    margin-right: 0.66666667em;
 }
 
 footer ul li:after {
-content: "|";
+    content: "|";
 }
 
 footer ul li:last-child:after {
-content: none;
+    content: none;
 }
 
 footer ul li a {
-padding-right: 7px;
+    padding-right: 0.66666667em;
 }
 
 footer p {
-float:right;
+    float:right;
 }
 	
 
-/* MOBILE: Column 3
+
+/* MOBILE
 -------------------------------------------------------------- */
 
 @media screen and (max-width: 592px) {
-	body {
+	.mob-hide {
+    display: none;
+   }
+   
+   body {
     -webkit-text-size-adjust: none;
     background: url("assets/BG-mob-body.gif") repeat-y scroll center top #EEEEEE;
 	}
@@ -669,11 +422,11 @@ float:right;
 	}
 	
 	.main {
-    padding-bottom: 14px;
+    padding-bottom: 1em;
 	}
 	
 	.main.full {
-    padding-bottom: 7px;
+    padding-bottom: 0.5em;
 	}
 	
 	.main .genbox, aside .genbox, .main.full .genbox {
@@ -692,7 +445,7 @@ float:right;
 	}
 	
 	form {
-    margin-bottom: 14px;
+    margin-bottom: 1em;
 	}
 	
 	label {
@@ -742,11 +495,15 @@ float:right;
 }
 
 
-/* SMALL: Column 6
+/* SMALL
 -------------------------------------------------------------- */
 
 @media screen and (min-width: 593px) and (max-width: 849px) {
-	body {
+	.small-hide {
+    display: none;
+   }
+   
+   body {
     background: url("assets/BG-small-body.gif") repeat-y scroll center top #EEEEEE;
 	}
 	
@@ -844,11 +601,15 @@ float:right;
 }
 
 
-/* MEDIUM: Column 9
+/* MEDIUM
 -------------------------------------------------------------- */
 
 @media screen and (min-width: 850px) and (max-width: 1025px) {
-	.wrapper, footer {
+	.med-hide {
+    display: none;
+   }
+   
+   .wrapper, footer {
     min-width: 850px;
     max-width: 1025px;
 	}
@@ -939,3 +700,4 @@ float:right;
     margin: 0 2.8%;
 	}
 }
+
