--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import "css/jquery.fancybox.css";
-@import "css/typography.css";
+@import "css/normalize.css";
 @import "css/global.css";
 @import "css/layout.css";
 
@@ -7,24 +7,33 @@ ul#grid{background:url("css/assets/BG-grid.gif") repeat scroll left top green;di
 ul#grid li{background:url("css/assets/BG-grid.gif") repeat scroll left top red;height:100%;display:inline;float:left;padding:0;margin-left:1.25%;margin-right:1.25%;width:5.625%}
 ul#grid li:first-child{margin-left:2.5%}
 
+
+/* MOBILE
+-------------------------------------------------------------- */
+
 @media screen and (max-width: 592px) {
-/* mobile col3 */
 ul#grid{background-color:blue;min-width:320px;max-width:480px}
 ul#grid li{margin-left:3.5%;margin-right:3.5%;width:24%}
 ul#grid li:first-child{margin-left:7%}
 ul#grid li:nth-child(n+4){display:none}
 }
 
+
+/* SMALL
+-------------------------------------------------------------- */
+
 @media screen and (min-width: 593px) and (max-width: 849px) {
-/* small col6 */
 ul#grid{background-color:yellow;min-width:593px;max-width:768px}
 ul#grid li{margin-left:2%;margin-right:2%;width:12%}
 ul#grid li:first-child{margin-left:4%}
 ul#grid li:nth-child(n+7){display:none}
 }
 
+
+/* MEDIUM
+-------------------------------------------------------------- */
+
 @media screen and (min-width: 850px) and (max-width: 1025px) {
-/* medium col9 */
 ul#grid{background-color:gray;min-width:850px;max-width:1025px;}
 ul#grid li{margin-left:1.4%;margin-right:1.4%;width:8%}
 ul#grid li:first-child{margin-left:2.8%}
