--- a/css/normalize.css
+++ b/css/normalize.css
@@ -70,8 +70,9 @@ textarea { /* Addresses font-family inconsistency between 'textarea' and other f
     line-height: 1.5em;
 }
 
-body { /* Addresses margins handled incorrectly in IE6/7 */
+html, body { /* Addresses margins handled incorrectly in IE6/7 */
     margin: 0;
+    height: 100%;
 }
 
 
