harmonized with normalize.css and updated jQuery to v.1.7.2

--- a/css/ie7.css
+++ b/css/ie7.css
@@ -1,13 +1,11 @@
+/* IE-7 NORMALIZE
+-------------------------------------------------------------- */
+
 html.wf-loading details, html.wf-loading figcaption, html.wf-loading h1, html.wf-loading h2, html.wf-loading h3, html.wf-loading h4, html.wf-loading h5, html.wf-loading h6, html.wf-loading p, html.wf-loading blockquote, html.wf-loading dfn, html.wf-loading mark, html.wf-loading pre, html.wf-loading code, html.wf-loading kbd, html.wf-loading samp, html.wf-loading q, html.wf-loading sub, html.wf-loading sup, html.wf-loading li, html.wf-loading a, html.wf-loading span, html.wf-loading td, html.wf-loading th, html.wf-loading legend, html.wf-loading label, html.wf-loading button, html.wf-loading input, html.wf-loading select, html.wf-loading textarea, html.wf-loading small {filter: alpha(opacity=0);}
 
-/* IE-7 TYPOGRAPHY
--------------------------------------------------------------- */
-
-/* IE-7 FORMS
--------------------------------------------------------------- */
 
 /* IE-7 GLOBAL
 -------------------------------------------------------------- */
 
-/* IE-7 STYLEs
+/* IE-7 LAYOUT
 -------------------------------------------------------------- */
