--- a/css/ie9.css
+++ b/css/ie9.css
@@ -1,11 +1,8 @@
-/* IE-9 TYPOGRAPHY
--------------------------------------------------------------- */
-
-/* IE-9 FORMS
+/* IE-9 NORMALIZE
 -------------------------------------------------------------- */
 
 /* IE-9 GLOBAL
 -------------------------------------------------------------- */
 
-/* IE-9 STYLEs
+/* IE-9 LAYOUT
 -------------------------------------------------------------- */
